# developer

./: .example.env  .gitignore  LICENSE  Makefile  benchmarks.py  code2prompt.py  config.json  constants.py  debugger.py  debugger_no_modal.py  karpathy.md  main.py  main_no_modal.py  modal.py  notes.md  plugin_generator.py  plugins.md  prompt.md  prompt2.md  pyproject.toml  readme.md  requirements.txt  test-for-alignment.py  utils.py
.devcontainer/: devcontainer.json  dockerfile
agbenchmark/: benchmarks.py  config.json  regression_tests.json
agbenchmark/reports/: 1.json
archive/: anthropic.py  readme.md
code2prompt2code/: popup.html
etherscan-plugin/: app.py  openapi.yaml  requirements.txt  shared_dependencies.md
exampleChromeExtension/: content_script.js  manifest.json  popup.js  styles.css
examples/anthropicExtensionV0.1/: background.js  prompt used for this extension.md
examples/code2prompt/: code2prompt-gpt3.md
examples/code2prompt2code/: background.js  content_script.js
examples/v1_pong_game/: ai.js  index.html  main.js  shared_deps.md  style.css
prompts/plugins/: ethscan.md
smol-dev/archive/: anthropic.py  promptdeadend.md
smol-dev/code2prompt/: code2prompt.py
smol-dev/debugger/: debugger.py  debugger_no_modal.py
smol-plugin/: plugin_generator.py
smol_dev/: __init__.py  api.py  main.py  prompts.py  utils.py
src/: chroma-embeddings.parquet  embeddings.py  traversal.py
static/: readme.md
systemPrompts/: developer.py
v0/: constants.py  debugger.py  debugger_no_modal.py  main.py  main_no_modal.py  readme.md  v0_readme.md
(+15 files in other folders)
