[tool.poetry]
name = "smol_dev"
version = "0.0.3"
description = "python module of smol developer"
authors = ["swyx <swyx@dontemail.me>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "smol_dev" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
openai-function-call = "^0.0.5"
tenacity = "^8.2.2"
agent-protocol = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
src = "src.__main__:main"
api = "smol_dev.api:main"

[project.urls]
"Homepage" = "https://github.com/smol-ai/developer"
"Bug Tracker" = "https://github.com/smol-ai/developer/issues"